# docklift

./: .gitignore  CHANGELOG.md  LICENSE  README.md  commands.md  docker-compose.dev.yml  docker-compose.yml  install-almalinux.sh  install-debian.sh  install-dev.sh  install.sh  nginx.conf  package-lock.json  package.json  release.config.cjs  uninstall.sh  upgrade.sh
.github/workflows/: release.yml  test-almalinux.yml  test-debian.yml  test-install.yml  test-ubuntu.yml  test.yml
backend/: .dockerignore  .env  .env.example  Dockerfile  output.json  package-lock.json  package.json  pyproject.toml  test_upload.py
backend/app/: config.py  database.py  main.py  schemas.py
backend/app/models/: __init__.py  port.py  project.py
backend/app/routes/: deployments.py  files.py  ports.py  projects.py
backend/app/services/: compose_service.py  docker_service.py  git_service.py  nginx_service.py  port_manager.py
backend/prisma/: schema.prisma
backend/scripts/: reset-password.ts
backend/src/: index.ts
backend/src/lib/: authMiddleware.ts  config.ts  middlewareBypass.ts  prisma.ts
backend/src/routes/: auth.ts  backup.ts  deployments.ts  domains.ts  files.ts  github.ts  logs.ts  ports.ts  projects.ts  system.ts
backend/src/scripts/: reset-password.ts
backend/src/services/: compose.ts  docker.ts  git.ts  nginx.ts  terminal.ts
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  test-connection.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Footer.tsx  (+17 more)
nginx-proxy/: nginx.conf
(+58 files in other folders)
